k8s/ingress/ingress.yml
#____________________Ingress_____________________
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rider-guide-ingress
  namespace: rider-guide
spec:
  ingressClassName: nginx
  rules:
  - host: rider-guide.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80     # service port
      - path: /bikes
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 3000     # service port
